fix: products on safari

--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -100,6 +100,7 @@
   bottom: 0;
   position: absolute;
   top: 0;
+  height: 100%;
 }
 
 .card .media {
